# ICH-TEST

./: 01_项目架构设计文档.md
ICH-test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
ICH-test/core/: app_init.c  app_init.h  archive_service.c  archive_service.h  favorite_service.c  favorite_service.h  file_io.c  file_io.h  linkedlist.c  linkedlist.h  logger.c  logger.h  models.h  user_service.c  user_service.h
ICH-test/ui/: archiveeditdialog.cpp  archiveeditdialog.h  archivepage.cpp  archivepage.h  favoritepage.cpp  favoritepage.h  loginwindow.cpp  loginwindow.h  logviewpage.cpp  logviewpage.h  statspage.cpp  statspage.h  usermanagepage.cpp  usermanagepage.h
